# criadordeartigos

./: README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/criadordeartigos/: crew.py  main.py
src/criadordeartigos/config/: agents.yaml  tasks.yaml
src/criadordeartigos/tools/: custom_tool.py
