[project]
name = "criadordeartigos"
version = "0.1.0"
description = "criadorDeArtigos using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
criadordeartigos = "criadordeartigos.main:run"
run_crew = "criadordeartigos.main:run"
train = "criadordeartigos.main:train"
replay = "criadordeartigos.main:replay"
test = "criadordeartigos.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
